--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,44 @@
     transform: rotate(360deg);
   }
 }
+
+#container {
+  /*border: 1px solid #282c34;*/
+  border-radius: 4px;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  top: 50%;
+  /*background-color: #465063;*/
+}
+#container::before {
+  content: "";
+  /* width: 40px;
+  min-height: 100px;
+  background-color: #529600;
+  left: 0;
+  position: absolute;
+  display: block;
+  top: 0; */
+}
+
+button {
+  padding: 20px;
+  width: 70px;
+  font-size: 1.3em;
+  /* visibility: hidden; */
+}
+
+input {
+  font-size: 1.4em;
+  margin: 5px;
+  padding: 10px;
+  text-align: right;
+  border: 2px solid #717479;
+}
+
+#display {
+  text-align: right;
+  font-size: 1.3em;
+  width: 100%;
+}
