--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,21 @@
   src: url("digital-7.ttf");
 }
 
+body {
+  background-color: #282c34;
+}
+
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.App-header {
+  font-size: calc(10px + 2vmin);
+  color: white;
+  padding-top: 1em;
 }
 
 .App-logo {
@@ -19,23 +32,6 @@
   }
 }
 
-.App-header {
-  /* display: flex;
-  flex-direction: column;
-  align-items: center; */
-  font-size: calc(10px + 2vmin);
-  color: white;
-  padding-top: 1em;
-}
-
-body {
-  background-color: #282c34;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -45,32 +41,18 @@ body {
   }
 }
 
-#container {
-  /*border: 1px solid #282c34;*/
-  border-radius: 4px;
-  position: absolute;
-  transform: translate(-50%, -50%);
-  left: 50%;
-  top: 50%;
-  border: solid 1px #1a344e;
+.App-link {
+  color: #61dafb;
 }
 
-#container {
+.container {
   background-image: linear-gradient(to top, #375277, #3565a3, #375277);
+  border-radius: 4px;
+  border: solid 1px #1a344e;
+  width: fit-content;
 }
 
-#container::before {
-  content: "";
-  /* width: 40px;
-  min-height: 100px;
-  background-color: #529600;
-  left: 0;
-  position: absolute;
-  display: block;
-  top: 0; */
-}
-
-button {
+.button {
   width: 55px;
   height: 55px;
   margin: 5px;
@@ -92,7 +74,7 @@ button {
   background-color: #6197fbd3;
 }
 
-#display {
+.display {
   text-align: right;
   font-family: digital;
   font-size: 1.7em;
@@ -105,8 +87,4 @@ button {
   background-color: #cbcec6;
   color: #1a2c4b;
   box-shadow: -1px -1px #141214, 1px 1px #141214;
-}
-
-div {
-  border: solid red 0px;
 }
